[project]
name = "flightaware"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "fastmcp>=2.10.5",
    "flightradarapi>=1.4.0",
    "mcp[cli]>=1.11.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]
